--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
          <meta charset="utf-8">
      </head>
      <body style="text-align: center;">
-         <script src="build/project.bundle.js" charset="utf-8"></script>
+         <script src="https://raw.githubusercontent.com/damyon/matters/master/build/project.bundle.js" charset="utf-8"></script>
      </body>
  </html>
