--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
  <html>
      <head>
          <meta charset="utf-8">
+         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+         <style>
+          body {
+            font-family: 'Open Sans', sans-serif;
+            font-size: 18px;
+            background-color: #212121;
+            color: #fff;
+          }
+        </style>
      </head>
      <body style="text-align: center;">
         <script charset="utf-8" src="https://combinatronics.com/damyon/matters/master/build/project.bundle.js">
         </script>
+        <header>
+            <p>This game was made by Alice, Kimberley and Damyon Wiese.</p>
+            <p>Use the Arrow, Enter and Escape keys to play.</p>
+        </header>
      </body>
  </html>
