Add some thanks

--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
             <p>This game was made by Alice, Kimberley and Damyon Wiese.</p>
             <p>Use the Arrow, Enter and Escape keys to play.</p>
         </header>
+        <footer style="position: fixed; bottom: 10px; width: 100%;">
+            <p>Thankyou to</p>
+            <p>Phaser: https://phaser.io/</p>
+            <p>Matterjs: http://brm.io/matter-js/</p>
+        </footer>
      </body>
  </html>
