--- a/index-dev.html
+++ b/index-dev.html
@@ -2,11 +2,10 @@
  <html>
      <head>
          <meta charset="utf-8">
-         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
          <style>
           body {
-            font-family: 'Open Sans', sans-serif;
-            font-size: 14px;
+            font-family: 'Georgia', serif;
+            font-size: 16px;
             background-color: #212121;
             color: #fff;
           }
